; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/extr_xt_RATEEST.c_xt_rateest_hash_insert.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/extr_xt_RATEEST.c_xt_rateest_hash_insert.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xt_rateest = type { i32, i32 }

@rateest_hash = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.xt_rateest*)* @xt_rateest_hash_insert to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xt_rateest_hash_insert(%struct.xt_rateest* %0) #0 {
  %2 = alloca %struct.xt_rateest*, align 8
  %3 = alloca i32, align 4
  store %struct.xt_rateest* %0, %struct.xt_rateest** %2, align 8
  %4 = load %struct.xt_rateest*, %struct.xt_rateest** %2, align 8
  %5 = getelementptr inbounds %struct.xt_rateest, %struct.xt_rateest* %4, i32 0, i32 1
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @xt_rateest_hash(i32 %6)
  store i32 %7, i32* %3, align 4
  %8 = load %struct.xt_rateest*, %struct.xt_rateest** %2, align 8
  %9 = getelementptr inbounds %struct.xt_rateest, %struct.xt_rateest* %8, i32 0, i32 0
  %10 = load i32*, i32** @rateest_hash, align 8
  %11 = load i32, i32* %3, align 4
  %12 = zext i32 %11 to i64
  %13 = getelementptr inbounds i32, i32* %10, i64 %12
  %14 = call i32 @hlist_add_head(i32* %9, i32* %13)
  ret void
}

declare dso_local i32 @xt_rateest_hash(i32) #1

declare dso_local i32 @hlist_add_head(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
